feature: update category
